# url_shorten

./: .gitignore  docker-compose.yml
backend/: .env  Cargo.toml  Dockerfile  start.sh
backend-go/: .env  go.mod  main.go
backend/config/: default.toml
backend/migrations/: 20240901153550_create_urls_table.sql
backend/src/: config.rs  handlers.rs  main.rs  models.rs
frontend/src/: App.js
