[package]
name = "url-shortener"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.6"
sqlx = { version = "0.6", features = [
    "runtime-actix-rustls",
    "postgres",
    "macros",
], default-features = false }
serde = { version = "1.0", features = ["derive"] }
config = "0.13"
rand = "0.8"

[features]
default = ["sqlx/runtime-actix-rustls"]
